arrumando erros
